removed white space on phone and fixed nav again

--- a/invento18/static/invento19/css/style.css
+++ b/invento18/static/invento19/css/style.css
@@ -44,6 +44,7 @@ html, body {
       position: fixed;
       width: 100%;
       height: 60px;
+      background-color: #000;
 }
 
 /*border-bottom: 1px solid #2a2d34;*/
@@ -562,7 +563,6 @@ input[type="radio"]:checked + label:before {
 @media(max-width: 900px) {
       .product-sec .hero-image {
             display: block !important;
-            padding-top: 40px;
             /* height: 70vh; */
       }
 
